# Bezier

./: .gitignore  CMakeLists.txt  Readme.md
src/: BasicPoint.cpp  BasicPoint.h  Bezier.cpp  Bezier.h  Hull.cpp  Hull.h  Polygon.cpp  Polygon.h  application_logic.cpp  logic.cpp  logic.h  main.cpp  math.cpp  poly_helper.cpp
src/include/: BazicPoint.h  Bezier.h  Polygon.h  application_logic.h  logic.h
src/include/util/: code_organizers.h  math.h
src/util/: Path.h  Polynomial.h  code_organizers.h  math.cpp  math.h
tests/: CMakeLists.txt  main.cpp
tests/google_test/googlemock/docs/: CookBook.md
tests/google_test/googlemock/src/: gmock-internal-utils.cc  gmock-spec-builders.cc
tests/src/: BazicPoint.cpp  Bezier.cpp  Polygon.cpp  intersections.cpp  logic.cpp  poly_helper.cpp
tests/src/util/: math.cpp
